# embassy_quadcopter

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  mag_data.csv  new_flight_attempt.txt  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: assembly.md  radiomaster.md  s3-migration.md  sensors.md
firmware/: Cargo.toml
firmware/src/: accel_hw_offset.rs  calibration_storage.rs  flight.rs  fusion.rs  main.rs  motors.rs  panic_safety.rs  sensors.rs  wifi.rs
gamepad/: Cargo.toml
gamepad/src/: main.rs
ground_control/: Cargo.toml
ground_control/src/: main.rs
libs/: Cargo.toml
libs/src/: calibrate.rs  control.rs  lib.rs  telemetry.rs
src/: fusion.rs  main.rs  sensors.rs
stl/: PROJECT_FILE_drone.3mf  PROJECT_FILE_embassy_drone.3mf  PROJECT_FILE_quad.3mf  battery_holder_holes.3mf  battery_holder_holes.stl  battery_holder_pegs.3mf  battery_holder_pegs.stl  bottom_with_peg.stl  bottom_with_pegs.3mf  drone_frame.3mf  drone_frame.stl  fan_guard_back_left.3mf  fan_guard_back_right.3mf  fan_guard_front_left.3mf  fan_guard_front_right.3mf  fan_guards.stl  frame.stl  top_stand.3mf  top_stand.stl
visualizer/: Cargo.toml
visualizer/src/: main.rs
