[package]
name = "drone_embassy"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = "0.10"
embassy-time = "0.5"
esp-hal = { version = "1.1", features = ["esp32c3", "unstable"] }
esp-rtos = { version = "0.3", features = ["esp32c3", "embassy"] }
esp-bootloader-esp-idf = { version = "0.5", features = ["esp32c3"] }
esp-backtrace = { version = "0.19", features = [
	"esp32c3",
	"panic-handler",
	"println",
] }
esp-println = { version = "0.17", default-features = false, features = [
	"esp32c3",
	"jtag-serial",
	"log-04",
] }
icm20948-rs = { version = "0.2", features = ["async"] }
embedded-hal-async = "1.0"
mpu9250-async = { version = "0.1", optional = true }
libm = "0.2.16"
nalgebra = { version = "0.35.0", default-features = false }

[features]
default = []

[profile.release]
opt-level = "s"

[profile.dev]
# Needed to fit in RAM even in debug builds
opt-level = "s"

[patch.crates-io]
mpu9250-async = { path = "vendor/mpu9250-async" }
