[workspace]
members = ["firmware", "libs"]
# excluded because the yare x86 targets
exclude = ["ground_control", "visualizer"]
resolver = "2"

[patch.crates-io]
mpu9250-async = { path = "vendor/mpu9250-async" }

[profile.release]
opt-level = "s"

[profile.dev]
# needed to fit in RAM even in debug builds
opt-level = "s"
